--- a/NightSky.App/NightSky.App.csproj
+++ b/NightSky.App/NightSky.App.csproj
@@ -13,4 +13,8 @@
     <None Remove="Commands\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\Inventory\" />
+  </ItemGroup>
+
 </Project>
