master-inventory-component

--- a/NightSky.App/NightSky.App.csproj
+++ b/NightSky.App/NightSky.App.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\Inventory\" />
+    <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
 </Project>
