--- a/NightSky.App/NightSky.App.csproj
+++ b/NightSky.App/NightSky.App.csproj
@@ -17,4 +17,8 @@
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Runtime" Version="4.3.1" />
+  </ItemGroup>
+
 </Project>
