--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,6 @@ dotnet_diagnostic.CA1305.severity = none
 
 # CS8604: Возможно, аргумент-ссылка, допускающий значение NULL.
 dotnet_diagnostic.CS8604.severity = none
+
+# CS8625: Литерал, равный NULL, не может быть преобразован в ссылочный тип, не допускающий значение NULL.
+dotnet_diagnostic.CS8625.severity = none
